--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "flickity": "^3.0.0",
+    "framer-motion": "^10.13.1",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2"
   }
 }
